# LiquidsReflectometer

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  LICENSE  Makefile  README.md  TODO.md  environment.yml  mkdocs.yaml  pyproject.toml  setup.cfg  setup.py
.github/: pull_request_template.md
.github/workflows/: actions.yml  deploy_docs.yaml  package.yml  test.yml  test_and_deploy.yml  test_deploy.yml
.pixi/: config.toml
30Hz/: template_reduction.py  time-resolved-ui.py
conda.recipe/: meta.yaml
docs/: 404.html  Makefile  conf.py  index.html  index.md  index.rst  katex.js  objects.inv  release_notes.rst  releases.md  releases.rst  search.html
docs-sphinx/: conf.py  index.rst
docs/api/: background.md  event_reduction.md  index.html  index.md  lr_reduction.rst  output.md  peak_finding.md  reduction_template_reader.md  template.md  time_resolved.md  utils.md  workflow.md
docs/api/background/: index.html
docs/api/event_reduction/: index.html
docs/api/output/: index.html
docs/api/peak_finding/: index.html
docs/api/reduction_template_reader/: index.html
docs/api/template/: index.html
docs/developer/: contributing.md  contributing.rst  developer.md  developer.rst
docs/releases/: index.html
docs/search/: search_index.json
docs/source/: releases.rst
docs/user/: conda_environments.md  conda_environments.rst  dead_time_correction.rst  event_processing.md  event_processing.rst  workflow.md  workflow.rst
launcher/: launcher.py  new_launcher.py  nr_launcher.desktop  nr_launcher.sh  nr_launcher_dev.sh  nr_launcher_qa.sh  readme.py
launcher/apps/: direct_beam.py  dynamic_30Hz.py  dynamic_60Hz.py  file_batch.py  off_spec.py  overplot.py  quick_reduce.py  reduction.py  reduction_worker.py  refracted.py  roi_selector.py  sld_calculator.py  template_batch.py  template_reduce.py  xrr.py
launcher/scripts/: off_spec.py  quick_reduce.py  refracted_beam.py  template_reduction.py  time_resolved_reduction.py  xrr_reduction.py
miniDAS/: acquire_composite_DB.py  db_collector.py  db_planner.py  instrument.py  sample_changer.py  test_io.py
plan/: add-template-reduction-tab-to-launcher.md  fix-shared-user-pixi-permission.md  fix-test-web-report-errors.md  transcript.md
reduction/: README.md
reduction/data/: REFL_198409_1_198409_partial.txt  REFL_198409_2_198410_partial.txt  reference_fbck.txt  reference_r201284_quick.txt  reference_rq.txt  reference_rq_201282.txt  reference_rq_avg.txt  reference_rq_avg_overlap.txt  reference_short_nobck.txt  sf_197912_Si_dt_par_42_200.cfg  sf_197912_Si_dt_par_46_200.cfg  sf_197912_Si_dt_par_46_300.cfg  template.xml  template_201282.xml  template_fbck.xml  template_short_nobck.xml  template_with_const_q_true.xml  template_with_instrument_settings.xml
reduction/lr_reduction/: Cd-abs-factors.txt  DeadTimeCorrection.py  __init__.py  _version.py  background.py  dead_time_correction.py  event_reduction.py  gravity_correction.py  instrument_settings.py  output.py  peak_finding.py  reduction_template_reader.py  settings.json  template.py  time_resolved.py  tof_reduction.py  typing.py  utils.py  workflow.py
reduction/notebooks/: background-function.ipynb  divergent-beam.ipynb  example.ipynb  time-resolved.ipynb  workflow-fixed-tthd.ipynb  workflow.ipynb
reduction/test/: conftest.py  test_dead_time.py  test_reduction.py  test_reduction_template_reader.py  test_scaling_factors.py  test_time_resolved.py
reduction/tests/: conftest.py  test_dead_time.py  test_gravity_correction.py  test_reduction.py  test_reduction_template_reader.py  test_time_resolved.py
scans/: Makefile  refl-39-25_0.014-0.053_wide-range_inverted.csv
scans/standards/: direct-39-25_Air.csv  direct-39-25_Air_0att.csv  direct-39-25_Si2InDiam.csv  direct-39-25_Si2InDiam_0att.csv  refl-39-25.csv  refl-39-25_0.2Qmax_inverted.csv  refl-39-25_0.2max.csv  refl-39-25_inverted.csv
scans/time-resolved/: refl-39-25_0.015-0.037_inverted.csv  refl-39-25_0.017-0.05_inverted.csv  refl-39-25_0.034-0.14_inverted.csv  refl-39-25_0.066-0.19_inverted.csv
scripts/autoreduce/: peak_finding.py  rebin_ml.py  reduce_REF_L.py  sf_calculator.py
scripts/livereduce/: livereduce.conf  reduce_REF_L_live_post_proc.py  reduce_REF_L_live_proc.py
scripts/shared/: batch_reduce.py  check_dependencies_sync.py  listener.py  process_sf.py  readme.md  sample_changer.py
scripts/test/: test_peaks.py  test_sf.py  thi_alignment.py
src/lr_autoreduce/: reduce_REF_L.py
src/lr_reduction/: EBW_nr_reduction_test.py  background.py  binary_processing.py  data_info.py  dead_time_correction.py  direct_beam_maker.py  event_reduction.py  example_direct_beam.py  example_nr_from_template.py  example_nr_reduction.py  example_nr_reduction_from_file.py  gravity_correction.py  instrument_settings.py  mantid_utils.py  new_reduction_from_file.py  new_reduction_from_template.py  new_reduction_template_reader.py  normalization_and_stitching.py  nr_reduction_calc.py  nr_reduction_config.py  nr_tools.py  output.py  peak_finding.py  reduction_template_reader.py  save_reduced_data.py  settings.json  stitching.py  template.py  theta_selection.py  time_resolved.py  types.py  user_defined_function.py  utils.py  web_report.py  workflow.py
src/notebooks/: workflow.ipynb
tests/: conftest.py  test_dead_time.py  test_normalization_and_stitching.py  test_output_stitching.py  test_reduction.py  test_reduction_template_reader.py  test_scaling_factors.py  test_scaling_factors_workflow.py  test_time_resolved.py
tests/data/: reference_rq.txt  reference_rq_201282.txt  reference_rq_avg.txt  reference_rq_avg_overlap.txt  reference_short_nobck.txt  sf_197912_Si_auto.cfg  sf_201043_Si.cfg  template.xml  template_201282.xml  template_fbck.xml  template_short_nobck.xml  template_stitching_automatic_average.xml  template_with_instrument_settings.xml
tests/reduction/: test_reduction.py  test_time_resolved.py
tests/resources/: template.xml  template_short_nobck.xml
tests/scripts/: test_peaks.py  test_sf.py
tests/unit/: test_event_reduction.py
xrr/: readme.md  xrr_processing.py
(+46 files in other folders)
