[project]
name = "lr_reduction"
authors = [
	{name = "Mat", email = "m2d@ornl.gov"}
]
description = "Reduction scripts for the Liquids Reflectometer. This includes both automated reduction scripts and useful scripts to reprocess data."
dynamic = ["version"]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3"
]
dependencies = [
    "lmfit",
    "numpy",
    "matplotlib",
    "mantid"

]

[project.optional-dependencies]
tests = [
    "mock",
    "pytest",
    "pytest-qt",
    "typing"
]

[project.urls]
Homepage = "https://github.com/neutrons/LiquidsReflectometer"

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 140
select = ["A", "ARG", "E", "W", "F", "I", "PT", "RUF100"]
ignore = [
  "E402",  # module level import not at top of file
  "E722",  # bare except
  "E741", "E743",  # ambiguous function name, generally 'l'
  "F403",  # wild imports
  "F405", "F821"  # unknown names from probably from wild imports
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
skip_empty = true

[tool.pytest.ini_options]
pythonpath = [
  ".", "reduction", "scripts", "tests/data/liquidsreflectometer-data/nexus/"
]
testpaths = ["tests"]
norecursedirs = [".git", "tmp*", "_tmp*", "__pycache__", "*dataset*", "*data_set*"]
markers = [
  "datarepo: mark a test as using LiquidsReflectometer-data repository",
  "scripts: mark a test as a script that should be run manually",
]

[tool.flake8]
ignore = [
    "E114", "E115", "E116", "E121", "E123", "E126", "E133",
    "E2", "E704", "E722", "E741", "E743", "W503", "F403", "F405", "F999"
]
doctests = false
max-line-length = 130
