[metadata]
name = lr_reduction
version = attr: lr_reduction.__version__
description= Liquids Reflectometer tools for reduction
author = Mat
author_email = m2d@ornl.gov
url = https://github.com/neutrons/LiquidsReflectometer
long_description = file: README.md
license = BSD 3-Clause License
classifiers =
  Operating System :: OS Independent
  Programming Language :: Python :: 3

[options]
include_package_data = False
python_requires >= 3.8
package_dir =
    =reduction
packages = find:

install_requires =
    lmfit
    numpy
    matplotlib
    versioningit

tests_require =
    mock
    pytest
    pytest-qt
    typing

[options.packages.find]
where = reduction

[flake8]
ignore = E114,E115,E116,E121,E123,E126,E133,E2,E704,E722,E741,E743,W503,F403,F405,F999
doctests = False
max-line-length = 130
